# Puc_academic_calculator

./: CMakeLists.txt  README.md  idioma.ivx  resources.qrc
.claude/: settings.local.json
forms/: AddSubjectDialog.ui  MainWindow.ui  aboutdialog.ui  option.ui  system_evaluation.ui
include/: version.h
include/core/: GradeSystem.h  TableGrade.h
include/data/: ErrorLog.h  StudentRecord.h  item_system_evaluation.h
include/io/: FileManager.h  JsonParser.h  PatchImagem.h
include/managers/: LanguageManager.h  UIManager.h
include/ui/: LanguageManager.h  MainWindow.h  PreferencesWindow.h  UIManager.h
include/utils/: GlobalAccess.h
include/windows/: AddSubjectDialog.h  MainWindow.h  PreferencesWindow.h  aboutdialog.h  system_evaluation.h
resources/: resources.qrc
resources/i18n/: en.ivx  idioma.ivx  pt-br.ivx
resources/styles/: AddSubjectDialogStyle_dark.qss  PreferencesWindowStyles_dark.qss  PreferencesWindowStyles_white.qss  system_evaluation_dark.qss  window_white.qss
src/: main.cpp
src/core/: GradeSystem.cpp  TableGrade.cpp
src/data/: ErrorLog.cpp  StudentRecord.cpp  item_system_evaluation.cpp
src/io/: FileConverter.cpp  FileConverter.h  FileManager.cpp  JsonParser.cpp  PatchImagem.cpp
src/managers/: LanguageManager.cpp  UIManager.cpp
src/ui/: LanguageManager.cpp  MainWindow.cpp  PreferencesWindow.cpp  UIManager.cpp  main.cpp
src/utils/: GlobalAccess.cpp
src/windows/: AddSubjectDialog.cpp  MainWindow.cpp  PreferencesWindow.cpp  aboutdialog.cpp  system_evaluation.cpp
styles/: styles_tabel_widget.qss  ui_styles.qss  window_branco.qss
ui/: InfoWindow.ui  MainWindow.ui  option.ui
